k3s/helm/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
